# mcp-postgres-server

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mcp-registry-entry.yaml  pyproject.toml
.github/workflows/: ci.yml  dockerhub-description.yml  release.yml
src/mcp_postgres/: __init__.py  config.py  exceptions.py  server.py
src/mcp_postgres/db/: __init__.py  pool.py
src/mcp_postgres/tools/: __init__.py  execute.py  introspect.py  query.py  schema.py
tests/: conftest.py  test_execute.py  test_query.py  test_schema.py
