[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-postgres-server"
version = "0.1.2"
description = "A production-ready MCP server that exposes PostgreSQL databases via the Model Context Protocol"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Alexander Marin", email = "marinalexander691@gmail.com" }
]
keywords = ["mcp", "postgresql", "postgres", "ai", "llm", "database", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "mcp>=1.0.0",
  "psycopg[binary]>=3.1.0",
  "psycopg-pool>=3.2.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "loguru>=0.7.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "testcontainers[postgres]>=4.0.0",
]

[project.scripts]
mcp-postgres-server = "mcp_postgres_server.server:main"

[project.urls]
Homepage = "https://github.com/madmarin/mcp-postgres-server"
Repository = "https://github.com/madmarin/mcp-postgres-server"
Issues = "https://github.com/madmarin/mcp-postgres-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_postgres_server"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "--cov=src/mcp_postgres_server --cov-report=term-missing"

[tool.coverage.run]
source = ["src/mcp_postgres_server"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
